Fixes issue #2064 - Rename cloud.piranha.resource to cloud.piranha.resource.impl