@@ -25,52 +25,47 @@
  * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
  * POSSIBILITY OF SUCH DAMAGE.
  */
-package cloud.piranha.resource;
-
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.InputStream;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.util.stream.Stream;
+package cloud.piranha.resource.impl;
 
 import cloud.piranha.resource.api.Resource;
+import java.io.BufferedInputStream;
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.File;
+import java.io.IOException;
+import java.io.InputStream;
+import java.net.URL;
+import java.util.List;
+import java.util.jar.JarEntry;
+import java.util.jar.JarFile;
+import java.util.stream.Stream;
+import java.util.zip.ZipEntry;
 
 /**
- * The default AliasedDirectoryResource.
+ * The default JarResource.
  *
  * @author Manfred Riem (mriem@manorrock.com)
  */
-public class AliasedDirectoryResource implements Resource {
+public class JarResource implements Resource {
 
     /**
-     * Stores the root directory.
+     * Stores the JAR file.
      */
-    private File rootDirectory;
-
-    /**
-     * Stores the alias.
-     */
-    private String alias;
+    private File jarFile;
 
     /**
      * Constructor.
      */
-    public AliasedDirectoryResource() {
-        this.rootDirectory = null;
-        this.alias = null;
+    public JarResource() {
     }
 
     /**
      * Constructor.
      *
-     * @param rootDirectory the root directory.
-     * @param alias the alias.
+     * @param jarFile the JAR file.
      */
-    public AliasedDirectoryResource(File rootDirectory, String alias) {
-        this.rootDirectory = rootDirectory;
-        this.alias = alias;
+    public JarResource(File jarFile) {
+        this.jarFile = jarFile;
     }
 
     /**
@@ -79,20 +74,28 @@ public class AliasedDirectoryResource implements Resource {
     @Override
     public URL getResource(String location) {
         URL result = null;
-        if (location.startsWith(alias)) {
-            location = location.substring(alias.length());
-            File file = new File(rootDirectory, location);
-            if (file.exists()) {
-                try {
-                    result = file.toURI().toURL();
-                } catch (MalformedURLException exception) {
+        if (location != null) {
+            try {
+                try (JarFile jar = new JarFile(jarFile)) {
+                    if (jar.getJarEntry(location) != null) {
+                        result = new URL("jar:" + jarFile.toURI() + "!/" + location);
+                    }
                 }
+            } catch (IOException ioe) {
+                result = null;
             }
         }
         return result;
     }
 
     /**
+     * Get the resource as a stream.
+     *
+     * <p>
+     * Note that this method will read the content of a JAR entry into a
+     * byte-array to avoid locking the JAR file.
+     * </p>
+     *
      * @param location the resource location.
      * @return the input stream, or null if not found.
      * @see Resource#getResourceAsStream(java.lang.String)
@@ -100,51 +103,56 @@ public class AliasedDirectoryResource implements Resource {
     @Override
     public InputStream getResourceAsStream(String location) {
         InputStream result = null;
-        if (location.startsWith(alias)) {
-            location = location.substring(alias.length() + 1);
-            File file = new File(rootDirectory, location);
-            try {
-                result = new FileInputStream(file);
-            } catch (FileNotFoundException exception) {
+        try (JarFile jar = new JarFile(jarFile)) {
+            JarEntry entry = jar.getJarEntry(location.startsWith("/") ? location.substring(1) : location);
+            if (entry != null) {
+                InputStream inputStream;
+                try (InputStream jarInputStream = jar.getInputStream(entry)) {
+                    inputStream = new BufferedInputStream(jarInputStream);
+                    ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+                    inputStream.transferTo(outputStream);
+                    result = new ByteArrayInputStream(outputStream.toByteArray());
+                }
+                inputStream.close();
             }
+        } catch (IOException exception) {
         }
         return result;
     }
-    
+
     @Override
     public Stream<String> getAllLocations() {
-        return Stream.empty();
+        List<String> entryNames;
+        try (JarFile jar = new JarFile(jarFile)) {
+             entryNames = jar
+                    .stream()
+                    .map(ZipEntry::getName)
+                    .map(x -> "/" + x)
+                    .toList();
+        } catch (IOException e) {
+            return Stream.of();
+        }
+        return entryNames.stream();
     }
 
     /**
-     * {@return the alias}
+     * {@return the JAR file}
      */
-    public String getAlias() {
-        return this.alias;
+    public File getJarFile() {
+        return this.jarFile;
     }
 
     /**
-     * {@return the root directory}
-     */
-    public File getRootDirectory() {
-        return this.rootDirectory;
-    }
-
-    /**
-     * Set the alias.
+     * Set the JAR file.
      *
-     * @param alias the alias.
+     * @param jarFile the JAR file.
      */
-    public void setAlias(String alias) {
-        this.alias = alias;
+    public void setJarFile(File jarFile) {
+        this.jarFile = jarFile;
     }
 
-    /**
-     * Set the root directory.
-     *
-     * @param rootDirectory the root directory.
-     */
-    public void setRootDirectory(File rootDirectory) {
-        this.rootDirectory = rootDirectory;
+    @Override
+    public String getName() {
+        return jarFile.getName();
     }
 }
